# Deep-Emergent-Civ-Simulator

./: .gitattributes  .gitignore  .mcp.json  AGENTIC_ADDENDUM.md  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFFS.md  Makefile  NOTICE  README.md  ROADMAP.md  RUNBOOK.md  TODOS.md  clippy.toml  justfile  rust-toolchain.toml
crates/bio/: Cargo.toml
crates/bio/src/: agent.rs  anatomy.rs  belief.rs  calibration.rs  evidence.rs  genome.rs  lib.rs  mate_choice.rs  tom.rs
crates/core/: Cargo.toml
crates/core/examples/: diffusion_bench.rs  mul_throughput.rs
crates/core/src/: arena.rs  cacheline.rs  canonical.rs  command.rs  event.rs  fixed.rs  gauss.rs  hash.rs  id.rs  keys.rs  lib.rs  rng.rs  schedule.rs
crates/core/tests/: determinism.rs  gauss.rs  gpu_emulation.rs  transcendentals.rs
crates/gpu/: Cargo.toml
crates/gpu/examples/: diffusion_gpu.rs  mul_throughput_gpu.rs
crates/gpu/src/: being.rs  field.rs  lib.rs  perceive.rs  prim.rs  stage0.rs  transcendental.rs  worldgen.rs
crates/gpu/tests/: being_gate.rs  canon_guard.rs  cpu_backend_gate.rs  cross_backend.rs  diffusion_gate.rs  field_step_gate.rs  stage0_gate.rs  transcendental_gate.rs  worldgen_gate.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: admission.rs  lib.rs
crates/materials/: Cargo.toml
crates/materials/examples/: property_ringer.rs
crates/materials/src/: assemblage.rs  atmosphere.rs  band_gap.rs  conductivity.rs  contract.rs  correlation.rs  creep.rs  definition.rs  differentiation.rs  disk_composition.rs  electronic.rs  equilibrium_condensation.rs  freezer.rs  grain_opacity.rs  harrison.rs  lib.rs  localized.rs  log.rs  magnetism.rs  memo.rs  metallic.rs  mie_gruneisen_debye.rs  nucleation.rs  opacity_registry.rs  optics.rs  properties.rs  quench.rs  stoner.rs  surface_composition.rs  thermoelastic.rs  verdict.rs
crates/materials/tests/: freezer_consistency.rs  log_sum_exp_binding.rs
crates/physics/: Cargo.toml
crates/physics/data/: badger_hl_parameters.toml  band_gap.toml  biology_floor.toml  born_exponents.toml  chem_optics_floor.toml  condensation_lodders2003.toml  convection_scaling.toml  correlation_mit_reference.toml  covalent_radii_pyykko.toml  crystal_field.toml  d_state_radii.toml  elastic_thickness_hindcast.toml  em_floor.toml  floor_provenance.toml  fluids_floor.toml  geology_floor.toml  ground_floor.toml  gruneisen.toml  hayashi_wall.toml  ice_sublimation_murphy_koop.toml  ionic_lattice_energy_validation.toml  ionic_radii.toml  ionization_ladder.toml  mechanical_floor.toml  melting_endmembers.toml  metal_eos_anchors.toml  mineral_moduli.toml  optical_constants.toml  periodic_table.toml  perovskite_robie1995.toml  phase_conductivity.toml  phase_registry.toml  prototypes.toml  rayleigh_critical_eigenvalues.toml  shannon_radii.toml  solar_abundances_agss09.toml  stoner.toml  term_values.toml  thermoelastic_anchors.toml  tm_oxide_lattice_energy.toml
crates/physics/src/: band_gap.rs  condensation.rs  convection_scaling.rs  convective_viscosity.rs  covalent_radii.rs  creep_rows.rs  crystal_field.rs  d_state_radius.rs  elastic_thickness_rows.rs  ewald.rs  flexural_relief.rs  flexure.rs  floor_provenance.rs  force_constant.rs  gas_thermochemistry.rs  geodynamics.rs  geotherm.rs  graph.rs  gruneisen.rs  hayashi_wall.rs  hindcast_comparison.rs  ice_sublimation.rs  ionic_radii.rs  ionization_ladder.rs  janaf.rs  lattice_modulus.rs  laws.rs  lib.rs  materials_oracle.rs  melting.rs  melting_data.rs  metal_eos.rs  mineral_moduli.rs  mit_reference.rs  molecular_opacity.rs  moment_equivalence.rs  opacity.rs  optical_constants.rs  periodic.rs  perovskite_gibbs.rs  (+19 more)
crates/physics/tests/: chem_optics.rs  em.rs  floors.rs  fluids.rs  graph.rs  rate_law.rs  steering.rs
crates/planet/: Cargo.toml  build.rs
crates/planet-substrate/: Cargo.toml  build.rs
crates/planet-substrate/src/: absolute_floor.rs  astro.rs  deeptime.rs  flexural_field.rs  geodynamics.rs  geodynamics_surface.rs  giants.rs  lib.rs  moons.rs  planet.rs  planetary_assembly.rs  secular.rs  smallbody.rs  stellar.rs
crates/planet/src/: lib.rs
crates/planet/tests/: canonical_cli.rs  canonical_observation.rs
crates/sim/: Cargo.toml  build.rs
crates/sim/examples/: aging_demo.rs  biosphere_probe.rs  controller_tax.rs  conversation.rs  creatures_react_demo.rs  dawn_band.rs  dawn_world.rs  living_world.rs  naming_game.rs  planet_live.rs  planet_relief.rs  planet_volcanism.rs  run_world.rs  the_first_slice.rs  tick_bench.rs  two_bands.rs  walkers.rs
crates/sim/src/: absence.rs  affordance_percept.rs  agent.rs  anatomy.rs  astro.rs  axiom.rs  base_rates.rs  belief.rs  biosphere.rs  body.rs  breeding.rs  calibration.rs  census.rs  clock.rs  conservation.rs  contact_transfer.rs  contact_wound.rs  controller.rs  conviction_experience.rs  conviction_percept.rs  cpd_composition.rs  cpd_population.rs  cpd_profile.rs  cpd_satellites.rs  cpd_temperature.rs  cpd_thermal.rs  cpd_transport.rs  dawn_harness.rs  decision.rs  decompose.rs  deeptime.rs  demography.rs  derive_gate.rs  dialogue.rs  discovery.rs  edibility.rs  environ.rs  epoch.rs  evidence.rs  evolve.rs  (+62 more)
crates/sim/tests/: biosphere_steering.rs  birth.rs  breeding_census.rs  breeding_value.rs  cognition_determinism.rs  dawn_band.rs  dawn_harness_quarantine.rs  dawn_lifecycle.rs  dawn_seed.rs  derived_output_live.rs  determinism_harness.rs  development_env.rs  dialogue_steering.rs  drift.rs  (+20 more)
crates/stone0/: Cargo.toml
crates/stone0-build/: Cargo.toml  build.rs
crates/units/: Cargo.toml
crates/viewer/: Cargo.toml
crates/world/: Cargo.toml
parked/: Cargo.toml  README.md  RUNBOOK_LEGACY.md  quarantine_ledger.toml
parked/audits/: deeptech-northstar-2026-06-29.md  determinism-redteam-2026-06-29.md
parked/calibration/: reserved.toml
parked/docs/: PROVENANCE_LEDGER_LEGACY.md  audit.md  design.md  emergent_behavior_design.md  temporal_lod_research.md
parked/scenarios/: confluence.toml  europa.toml  mirror.toml  venus.toml
parked/scripts/: constructor_baseline.tsv  determinism_baseline.tsv  profile_override_baseline.tsv
parked/tools/: civsim_harness_server.py
(+673 files in other folders)
