# Workspace root. The crate split follows RUNBOOK section 1a and grows toward the
# wider decomposition of design Part 59: a determinism core buildable and fully
# testable now, the unit and dimension system, a simulation crate built in staged
# dependency order, and the spatial and worldgen layer (crates/world, roadmap M1)
# the simulation will sit on.
[workspace]
members = ["crates/core", "crates/physics", "crates/units", "crates/compose", "crates/materials", "crates/sim", "crates/world", "crates/viewer", "crates/gpu"]
# crates/gpu carries the heavy CubeCL dependency and needs a CUDA device at run time, so it is kept
# out of the default set: a plain `cargo build`/`cargo test` stays lean and CUDA-free, and the GPU
# crate is built and tested explicitly with `cargo {build,test} -p civsim-gpu`.
default-members = ["crates/core", "crates/physics", "crates/units", "crates/compose", "crates/materials", "crates/sim", "crates/world", "crates/viewer"]
resolver = "2"

[workspace.package]
authors = ["Nathan M. Fraske"]
license = "Apache-2.0"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/nathanfraske/deep-emergent-civ-simulator"
rust-version = "1.94"

[profile.release]
# Determinism does not depend on optimization level, but reproducible release
# builds are wanted; keep codegen settings explicit rather than implicit.
overflow-checks = true
