# Canonical abiotic workspace. The root dependency graph runs from deterministic
# core, units, and the admitted ledger through physics, materials, and world into
# civsim-planet, then exposes immutable snapshots to the observer-only viewer.
# Biology, civilization, compose, scenarios, their mixed foundation, and the old
# causal runner live only in the nested parked workspace.
[workspace]
members = ["crates/core", "crates/ledger", "crates/physics", "crates/units", "crates/materials", "crates/planet-substrate", "crates/planet", "crates/world", "crates/viewer", "crates/gpu", "crates/stone0"]
exclude = ["parked"]
# crates/gpu carries the heavy CubeCL dependency and needs a CUDA device at run time, so it is kept
# out of the default set: a plain `cargo build`/`cargo test` stays lean and CUDA-free, and the GPU
# crate is built and tested explicitly with `cargo {build,test} -p civsim-gpu`.
# The unqualified Cargo path is the abiotic planet substrate. Biology,
# civilization, their mixed foundation, old simulation runner, and causal
# viewer are members only of the nested `parked/` workspace.
default-members = ["crates/core", "crates/ledger", "crates/physics", "crates/units", "crates/materials", "crates/planet-substrate", "crates/planet", "crates/world", "crates/viewer", "crates/stone0"]
resolver = "2"

[workspace.package]
authors = ["Nathan M. Fraske"]
license = "Apache-2.0"
edition = "2021"
version = "0.1.0"
repository = "https://github.com/nathanfraske/deep-emergent-civ-simulator"
rust-version = "1.94"

[profile.release]
# Determinism does not depend on optimization level, but reproducible release
# builds are wanted; keep codegen settings explicit rather than implicit.
overflow-checks = true

# Keep build-time dependencies explicit and optimized independently from
# canonical runtime crates. The parked workspace repeats its own profile because
# nested Cargo workspaces do not inherit this one.
[profile.dev.build-override]
opt-level = 3

[profile.dev]
# Full DWARF is the cargo default and it is the largest silent cost of the dev and test path: the debug
# artifacts for a `cargo test --no-run` of the default members weigh 9.9 GB, and writing and linking them
# costs real time. Line tables keep what this project reads (a panic backtrace with file and line, and
# symbolised profiles), and drop what it does not (variable inspection under a debugger). Measured on the
# historical warm rebuild after a one-line simulation edit: 6.5 seconds to 5.3
# seconds, with the target directory falling from 9.9 GB to 4.5 GB. This is the
# dev profile only and does not alter release semantics.
debug = "line-tables-only"

[profile.release.build-override]
opt-level = 3
