[package]
name = "civsim-core"
description = "Domain-neutral deterministic mechanics: fixed-point math, counter-based RNG, stable ids, arenas, event logs, and typed canonical-state boundaries."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
# Compatibility-only biology and civilization identifiers. The active abiotic
# workspace leaves this disabled; the separately parked workspace enables it.
legacy-domains = []

# The bedrock has no external dependencies on purpose. The determinism contract
# is strongest when the foundation depends on nothing that could change a numeric
# result across versions or platforms. std::thread carries the multi-thread
# determinism harness, so no parallelism crate is needed here either.
[dependencies]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
# R-CANON-WALK: no unordered containers in canonical state (see clippy.toml).
disallowed_types = "deny"
