# The canonical GPU compute crate (design Part 5.4, R-GPU-CANON-PIN). It carries the CubeCL
# dependency so the determinism bedrock in crates/core stays dependency-free (see core/Cargo.toml):
# the GPU path is a consumer of the Fixed oracle, never the other way round. The crate builds with no
# CUDA present (cudarc dynamically loads the driver and NVRTC at runtime), so the workspace compiles
# on a machine with no device; the device-touching tests self-skip unless CIVSIM_GPU is set. It is
# excluded from the workspace default-members so a plain `cargo build`/`cargo test` stays lean and
# CUDA-free; build it with `cargo build -p civsim-gpu`.
[package]
name = "civsim-gpu"
description = "Fixed-point Stage 0, field, and transcendental GPU kernels gated bit-for-bit against the civsim-core oracle."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
civsim-core = { path = "../core" }
cubecl = { version = "0.10", features = ["cuda", "cpu", "vulkan"] }

[lints.clippy]
# R-CANON-WALK is scoped to the canonical tick-state crates (core, sim, world);
# this crate holds no hashable simulation state, so the ordered-container lint is off here.
disallowed_types = "allow"
