[package]
name = "civsim-materials"
description = "The materials substrate kernel: the owner's Verdict selection contract (VERDICT_KERNEL_CONTRACT.md), reifying the proposer -> disposer -> freezer loop and the Gap/Residual meta-laws as types so they are type-enforced rather than convention-enforced. The kernel owns the contract and the discipline; the physics content (the thermochemical and attractor instantiations) lands in plugin modules implementing its traits. A clean layer above core and physics, below sim (core -> physics -> materials -> sim)."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The deterministic fixed-point and canonicalization primitives: Fixed (Q32.32), canonical_sorted
# (input-order-independent ordering, R-CANON-WALK), and content_id over StateHasher (the deterministic
# content hash the seeded-draw canonicalization law keys on). The kernel reuses these rather than
# inventing its own, so honoring the canonicalization law is cheap.
civsim-core = { path = "../core" }
# The physics floor the thermochemical instantiation reads: the periodic table's per-element oxidation-state
# (valence) set is the charge-balance input the Stage-2 proposer enumerates over, keyed per element so an
# alien chemistry is a data row (Principle 9). The kernel contract (verdict/contract/memo/log) stays
# physics-free; only the instantiation depends on physics.
civsim-physics = { path = "../physics" }
# Exact rational arithmetic (BigRat) for the VCS amount redistribution: the condensed molar amounts solve a
# linear system whose element mass balance must close EXACTLY (the ConservedBudget bit-invariant), which
# fixed-point Gaussian elimination cannot guarantee, so the amount solve runs in exact rationals and rounds once.
civsim-units = { path = "../units" }
