[package]
name = "civsim-physics"
description = "The active abiotic physics-and-materials substrate: a data-driven quantity, interaction-law, and substance registry with deterministic fixed-point kernels for planetary and solar-system simulation."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
civsim-core = { path = "../core" }
# The absolute unit and dimensional system (design Part 55, R-UNITS-PIN): physics is the authored
# quantity catalogue this crate populates into the units QuantityRegistry, deriving each axis's
# per-quantity fixed-point scale from its owner-set envelope.
civsim-units = { path = "../units" }
# serde and toml only, the mature stable pair (not the fast-moving GPU/ECS stack),
# used to load the data-driven axis, law, and substance definitions. Values are
# carried as decimal strings and parsed to Fixed by integer arithmetic, so no
# floating point reaches canonical state through them.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.clippy]
# R-CANON-WALK is scoped to the canonical tick-state crates (core, sim, world);
# this crate holds no hashable simulation state, so the ordered-container lint is off here.
disallowed_types = "allow"
