[package]
name = "civsim-planet-substrate"
description = "Private pre-migration mechanisms retained for typed canonical planet adapters."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
civsim-core = { path = "../core" }
civsim-materials = { path = "../materials" }
civsim-physics = { path = "../physics" }
civsim-units = { path = "../units" }
civsim-world = { path = "../world" }

[build-dependencies]
civsim-stone0-build = { path = "../stone0-build" }

[lints.clippy]
disallowed_types = "deny"
