[package]
name = "civsim-sim"
description = "Staged simulation layer for the Emergent Civilization Simulator: the calibration manifest, the conserved-projection registry, the two-tier LOD model, and the substrate loaders. Behaviour gated on reserved values is held until the owner sets the numbers."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
civsim-core = { path = "../core" }
# The biosphere reads the resolved biology-and-composition floor (R-PHYS-BIO) to measure
# edibility as a relation between an organism's composition and a consumer's physiology.
# physics depends only on core, so this adds no heavy or fast-moving dependency.
civsim-physics = { path = "../physics" }
# The emergent technology-composition evaluator (design Part 41): the simulation wires the calibration
# manifest's reserved compose values into the evaluator and reads the promoted-primitive library.
# compose depends only on core and physics, so it adds no heavy or fast-moving dependency.
civsim-compose = { path = "../compose" }
# The located-identity join (phase 4) places sim occupants on the world's coordinates, and
# the full-simulation proof derives biosphere region profiles from the generated map. world
# depends only on core (and serde/toml), so the simulation sits on the spatial substrate
# without pulling in a GPU or ECS stack.
civsim-world = { path = "../world" }
# The absolute unit system and the deterministic composite-constant compute (design Part 55, R-UNITS-PIN):
# the Stefan-Boltzmann sigma DERIVES from the fundamentals here rather than being an authored decimal.
# units depends only on core, so it adds no heavy or fast-moving dependency and reaches no float.
civsim-units = { path = "../units" }
# serde and toml are mature, stable crates (not the fast-moving GPU/ECS stack of
# design Part 61), used only to parse the calibration manifest and the data-driven
# substrate definitions. No floating point reaches canonical state through them.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Rayon for DETERMINISTIC data-parallelism of the embarrassingly-parallel per-tick and worldgen loops (the
# field stencil, the per-being pre-compute maps, the per-genome/locus/region evolution loops). Every
# parallelized loop is order-free: it collects into an id-keyed BTreeMap, writes disjoint indexed slots, or
# maps into an indexed Vec, and draws RNG only through a DrawKey keyed by the item's own id, never the
# thread. So the result is bit-identical to the serial version at any thread count and the state_hash is
# invariant under RAYON_NUM_THREADS (the arc-4 determinism contract; see docs/working/GPU_BLUEPRINT.md). A
# mature, stable crate, not the fast-moving GPU/ECS stack.
rayon = "1"
# The GPU compute crate (CubeCL/CUDA), an OPTIONAL dependency behind the `gpu` feature. It is never
# compiled by a default build, so `cargo build`/`test` stays device-free and byte-identical; the field
# offload (the cross-tick stencil pipeline) is wired only under `--features gpu`, and even then arms only
# on an explicit runtime toggle, so the default state hash is untouched (docs/working/GPU_BLUEPRINT.md).
civsim-gpu = { path = "../gpu", optional = true }

[build-dependencies]
# Stone 0, the local-firing provenance gate (task #79). The build script calls it so the fixture-
# provenance scan fires on every `cargo build`/`check`/`test`/`clippy` of this crate, hard-blocking a
# violation unless the owner supplies the password override. Build-only, so it never enters the compiled
# crate and cannot move the state hash. Dependency-free, so it adds no third-party build surface.
civsim-stone0 = { path = "../stone0" }

[features]
# Wire the GPU field-stencil offload into the runner. Off by default; opt in with `--features gpu`.
gpu = ["dep:civsim-gpu"]

[dev-dependencies]
# The spatial and worldgen layer, used by the dawn-world example to place a band on a
# generated map. The library will take this as a regular dependency at the deep M2
# placement step (when a place becomes a map coordinate); for now only examples need it.
civsim-world = { path = "../world" }

[lints.clippy]
# R-CANON-WALK: no unordered containers in canonical state (see clippy.toml).
disallowed_types = "deny"
