# Copyright 2026 Nathan M. Fraske
# Licensed under the Apache License, Version 2.0; see LICENSE.
[package]
name = "civsim-stone0"
description = "Q1 Stone 0: a dependency-free local provenance gate that runs canonical Python checks, validates the scoped owner override, and scans for laundered credentials and retired phrases. Canonical authority failures fail closed; repository-service failures remain visible warnings. One shared build anchor guards the canonical planet graph, while the parked compatibility runner invokes the gate directly."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

# The gate has no external dependencies on purpose: base64 and every native scan are std-only. Nothing
# here can pull a version that perturbs a build. It is a build-dependency only, never a runtime input.
[dependencies]

# The library is the gate; the binary is a thin CLI over it, named stone0-gate for CI and local use.
[lib]
name = "civsim_stone0"
path = "src/lib.rs"

[[bin]]
name = "stone0-gate"
path = "src/main.rs"

[lints.clippy]
# R-CANON-WALK is scoped to the canonical tick-state crates (core, sim, world); this gate holds no
# simulation state, so the ordered-container lint is off here. The gate uses only BTree* regardless.
disallowed_types = "allow"
