[package]
name = "civsim-units"
description = "The absolute unit and dimensional system (design Part 55): a data-defined base-dimension registry, dimensions as base-exponent vectors, per-quantity fixed-point scales with an explicit overflow policy, and deterministic integer arithmetic and conversion. The mechanism is fixed; the base-dimension and quantity catalogues are data the owner provides (R-UNITS-PIN)."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
civsim-core = { path = "../core" }
# serde lets the catalogues load from data. No floating point is used anywhere in
# this crate; magnitudes are integer fixed-point, so nothing here can perturb a
# canonical result.
serde = { version = "1", features = ["derive"] }
