[package]
name = "civsim-viewer"
description = "Observer-only adapter for immutable canonical planet snapshots."
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
civsim-planet = { path = "../planet" }

[lints.clippy]
disallowed_types = "deny"
